# vec64

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
benches/: alloc_growth.rs  concat.rs  delete_range.rs  hotloop_simd.rs  hotloop_std.rs  jemalloc_comparison.rs  jemalloc_concurrent.rs  mmap_pages.rs
src/: alloc64.rs  append_only_vec.rs  global.rs  lib.rs  mmap_alloc.rs  page_aligned.rs  vec64.rs
tests/: test_concurrent.rs  test_global_allocator.rs
wasm-test/: Cargo.toml  README.md  index.html  serve.py
wasm-test/src/: lib.rs
