[package]
name = "vec64"
version = "0.3.0"
edition = "2024"
description = "High-performance Rust vector type with automatic 64-byte SIMD alignment."
license = "MIT"

[dependencies]
rayon = { version = "1.10.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }

[features]

# Adds parallel iterators via `Rayon`
parallel_proc = ["rayon"]

# WASM support with Web Worker threading
wasm = ["wasm-bindgen", "wasm-bindgen-rayon", "rayon"]