[package]
name = "vec64"
version = "0.4.7"
edition = "2024"
description = "High-performance Rust vector type with automatic 64-byte SIMD alignment."
license = "Apache-2.0"

[dependencies]
rayon = { version = "1.11.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-rayon = { version = "1.3", optional = true }
libc = { version = "0.2", optional = true }

[features]

# Adds parallel iterators via `Rayon`
parallel_proc = ["rayon"]

# WASM support with Web Worker threading
wasm = ["wasm-bindgen", "wasm-bindgen-rayon", "rayon"]

# Provides Alloc64Global for use as #[global_allocator]
global = []

# Transparent huge page hints for Alloc64 on Linux via madvise
thp = ["dep:libc"]

# Vec64 backed by MAllocPg64 using mmap/mremap, Linux-only.
#
# Allocations are MAP_PRIVATE | MAP_ANONYMOUS, so the mapping is
# private to the allocating process. In-place mutation methods that
# rely on this allocator (e.g. Vec64::delete_range) are sound only
# while the buffer lives within the owning process. If a downstream
# crate re-exports the underlying pointer across a process boundary
# (memfd, /dev/shm, custom IPC), the remote view will not see the
# mutation and may be invalidated by page remapping. Leave the
# feature off if your buffers cross process boundaries.
mmap = ["thp"]

# 1GB "gigantic" pages for MAllocPg64 allocations >= 1GB
giant_pages = ["mmap"]

# Contiguous append-only vector with stable element addresses.
# `AppendOnlyVec<T>` exposes `as_slice() -> &[T]` for lock-free reads
# and `push(value) -> Option<usize>` for concurrent CAS-bounded writes
# (the reservation phase is lock-free; the in-order commit phase waits
# for any pending predecessor). Holding `&mut self`, e.g. via
# `Arc::get_mut`, unlocks `as_mut_slice()` / `iter_mut()` for in-place
# mutation of existing entries under exclusive access. Used downstream
# as the value array backing shared categorical dictionaries.
append_only_vec = []

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tikv-jemallocator = "0.6"

[[bench]]
name = "alloc_growth"
harness = false
required-features = ["mmap"]

[[bench]]
name = "mmap_pages"
harness = false
required-features = ["mmap"]

[[bench]]
name = "jemalloc_comparison"
harness = false
required-features = ["mmap"]

[[bench]]
name = "hotloop_std"
harness = false

[[bench]]
name = "hotloop_simd"
harness = false

[[bench]]
name = "jemalloc_concurrent"
harness = false
required-features = ["mmap"]

[[bench]]
name = "delete_range"
harness = false
required-features = ["mmap"]

[[bench]]
name = "concat"
harness = false
required-features = ["mmap"]
